force-app/application/package/main/objects/Account/Account.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>