force-app/application/package/main/objects/Account/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <description>IxB: Email address</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Primary Email</label>
    <type>Email</type>
</CustomField>