force-app/application/package/main/objects/Account/fields/Account_Secondary_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Secondary_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Email</label>
    <type>Email</type>
</CustomField>