force-app/application/package/main/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asked - Not Provided</fullName>
            </value>
            <value>
                <fullName>Business Support Centre</fullName>
            </value>
            <value>
                <fullName>Educational Institution</fullName>
            </value>
            <value>
                <fullName>Entrepreneur Centre</fullName>
            </value>
            <value>
                <fullName>Federal Government</fullName>
            </value>
            <value>
                <fullName>Incubator</fullName>
            </value>
            <value>
                <fullName>Industry Organization - Association</fullName>
            </value>
            <value>
                <fullName>Innovation Centre</fullName>
            </value>
            <value>
                <fullName>Local Municipal Government</fullName>
            </value>
            <value>
                <fullName>Non Profit Organization</fullName>
            </value>
            <value>
                <fullName>Not Asked</fullName>
            </value>
            <value>
                <fullName>Other Government Program</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Provincial Government</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Stakeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>