force-app/application/package/main/objects/Account/fields/Agreed_to_Data_Collection_Policy__c.field-meta.xml
<CustomField>
    <fullName>Agreed_to_Data_Collection_Policy__c</fullName>
    <description>IxB: Used to define if the client has agreed to the data collection policy.</description>
    <label>Agreed to Data Collection Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>