force-app/application/package/main/objects/Account/fields/Aliases__c.field-meta.xml
<CustomField>
    <fullName>Aliases__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Alternative names when the business is referenced that are different from the value in &quot;Name&quot; , &quot;Operating Name&quot; and &quot;Legal Name&quot; fields. Examples include alternative spelling, previous known name, etc.</inlineHelpText>
    <label>Aliases</label>
    <type>TextArea</type>
</CustomField>