force-app/application/package/main/objects/Account/fields/BN_Lookup_validated__c.field-meta.xml
<CustomField>
    <fullName>BN_Lookup_validated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The information in this field has been validated by SRIP and cannot be updated. To request a change, use the Request Change button on this page.</inlineHelpText>
    <label>Business Number Validated</label>
    <type>Checkbox</type>
</CustomField>