force-app/application/package/main/objects/Account/fields/Country_of_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Ownership__c</fullName>
    <inlineHelpText>The country of ownership for the company.
Canadian: if business&apos;s ownership or control resides with individuals who are Canadian citizens or if the company&apos;s headquarters are in Canada.
Foreign: if business does not meet the above criteria.</inlineHelpText>
    <label>Country of Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canadian</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>