force-app/application/package/main/objects/Account/fields/CRA_Business_Number__c.field-meta.xml
<CustomField>
    <fullName>CRA_Business_Number__c</fullName>
    <description>IxB: Used to define the BN from CRA. Have set field level to 17 to allow for the following format - &quot;123456789 RT 0123&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CRA Business Number</label>
    <length>17</length>
    <type>Text</type>
</CustomField>