force-app/application/package/main/objects/Account/fields/Fiscal_Year_End_Month__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End_Month__c</fullName>
    <label>Fiscal Year End Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Months_in_Year</valueSetName>
    </valueSet>
</CustomField>