force-app/application/package/main/objects/Account/fields/General_Notes__c.field-meta.xml
<CustomField>
    <fullName>General_Notes__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Additional information about the business that is not captured in the description or other fields. This field should not contain any information that is confidential or commercially or competitively sensitive.</inlineHelpText>
    <label>General Notes (Pro-B)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>