force-app/application/package/main/objects/Account/fields/Incorporation_Type__c.field-meta.xml
<CustomField>
    <fullName>Incorporation_Type__c</fullName>
    <inlineHelpText>Indicates that the business is federal-based or provincial-based.</inlineHelpText>
    <label>Incorporation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
                <label>Provincial / Territorial</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>