force-app/application/package/main/objects/Account/fields/IncorporationJurisdiction__c.field-meta.xml
<CustomField>
    <fullName>IncorporationJurisdiction__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incorporation Jurisdiction</label>
    <length>15</length>
    <type>Text</type>
</CustomField>