force-app/application/package/main/objects/Account/fields/Industry_NAICS__c.field-meta.xml
<CustomField>
    <fullName>Industry_NAICS__c</fullName>
    <description>NAICS Codes for this client delimited by semicolon</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Industry of the organization based on the North American Industry Classification System (NAICS). Provide as many NAICS digits as possible but no fewer than 2.</inlineHelpText>
    <label>Industry (NAICS)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>