force-app/application/package/main/objects/Account/fields/Is_Placeholder_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Placeholder_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this is a placeholder account - otherwise false</description>
    <label>Is Placeholder Account</label>
    <type>Checkbox</type>
</CustomField>