force-app/application/package/main/objects/Account/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field holds the &quot;incorporated as&quot; name. Whereas the Account Name is for the Operating Name.</inlineHelpText>
    <label>Primary Legal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>