force-app/application/package/main/objects/Account/fields/Mob_Business_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Mob_Business_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>