force-app/application/package/main/objects/Account/fields/Mob_Name_FR__c.field-meta.xml
<CustomField>
    <fullName>Mob_Name_FR__c</fullName>
    <description>Name of the business created by Program or citizen</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name (FR) 🔹</label>
    <length>255</length>
    <type>Text</type>
</CustomField>