force-app/application/package/main/objects/Account/fields/Mob_Region_ISO_Codes__c.field-meta.xml
<CustomField>
    <fullName>Mob_Region_ISO_Codes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Region ISO Codes</label>
    <length>10</length>
    <type>Text</type>
</CustomField>