force-app/application/package/main/objects/Account/fields/Number_of_Programs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Programs__c</fullName>
    <label>Number of Programs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>