force-app/application/package/main/objects/Account/fields/Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Status__c</fullName>
    <description>Status of the organization&apos;s operations.</description>
    <label>Organization Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>