force-app/application/package/main/objects/Account/fields/Owner_Audience__c.field-meta.xml
<CustomField>
    <fullName>Owner_Audience__c</fullName>
    <description>Characteristics of the business or the business owners that map to audiences often used by programs to target under represented segments of the population.</description>
    <label>IDEA Identification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CRM_Audience</valueSetName>
    </valueSet>
</CustomField>