force-app/application/package/main/objects/Account/fields/PB_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>PB_Annual_Revenue__c</fullName>
    <complianceGroup>PROB</complianceGroup>
    <description>This field may contain protected B information</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Annual Revenue</label>
    <length>180</length>
    <type>Text</type>
</CustomField>