force-app/application/package/main/objects/Account/fields/PB_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>PB_Number_of_Employees__c</fullName>
    <complianceGroup>PROB</complianceGroup>
    <description>This field may contain protected B information</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Number of Employees</label>
    <length>50</length>
    <type>Text</type>
</CustomField>