force-app/application/package/main/objects/Account/fields/Primary_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Address_Type__c</fullName>
    <label>Primary Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headquarters</fullName>
                <default>true</default>
                <label>Headquarters</label>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Mailing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>