force-app/application/package/main/objects/Account/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <formula>BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Province</label>
    <type>Text</type>
</CustomField>