force-app/application/package/main/objects/Account/fields/Publicly_Traded__c.field-meta.xml
<CustomField>
    <fullName>Publicly_Traded__c</fullName>
    <label>Publicly Traded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>