force-app/application/package/main/objects/Account/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>