force-app/application/package/main/objects/Account/fields/Target_Market__c.field-meta.xml
<CustomField>
    <fullName>Target_Market__c</fullName>
    <inlineHelpText>These are the target markets that the company sells to or intends to sell to.</inlineHelpText>
    <label>Target Markets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Target_Market_Industry</valueSetName>
    </valueSet>
</CustomField>