force-app/application/package/main/objects/Account/fields/Year_of_Incorporation_Registration__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Incorporation_Registration__c</fullName>
    <description>IxB: Used to define the year the business was incorporated</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Year of Incorporation / Registration 🔹</label>
    <length>4</length>
    <type>Text</type>
</CustomField>