force-app/application/package/main/objects/Account/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the year (Preferred format ==&gt; 2001)</inlineHelpText>
    <label>In Business Since</label>
    <length>4</length>
    <type>Text</type>
</CustomField>