force-app/application/package/main/objects/Account/recordTypes/Mob_Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Mob_Business_Account</fullName>
    <active>true</active>
    <!--compactLayoutAssignment>CRM_Account_Compact_Layout</compactLayoutAssignment-->
    <description>Account created by citizen from mobile app</description>
    <label>Customer Community Account</label>
</RecordType>