force-app/application/package/main/objects/Account/recordTypes/Mob_Partner_Account.recordType-meta.xml
<RecordType>
    <fullName>Mob_Partner_Account</fullName>
    <active>true</active>
    <description>Account account is owner of Programs</description>
    <label>Mobile Region Code Account</label>
</RecordType>